"""Bzlmod for taopp-in-modern-cpp."""

module(
    name = "taopp-in-modern-cpp",
    version = "0.0.1",
)

bazel_dep(name = "rules_cc", version = "0.2.0")
bazel_dep(name = "platforms", version = "0.0.11")
# bazel_dep(name = "googletest", version = "1.15.2")
# bazel_dep(name = "bazel_skylib", version = "1.0.2")

bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
)
