"""Bzlmod for taopp-in-modern-cpp."""

module(
    name = "taopp-in-modern-cpp",
    version = "0.0.1",
)

# Setup major deps

bazel_dep(name = "rules_cc", version = "0.2.0")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "toolchains_llvm", version = "1.4.0")
# bazel_dep(name = "googletest", version = "1.15.2")
# bazel_dep(name = "bazel_skylib", version = "1.0.2")

bazel_dep(name = "hedron_compile_commands")
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "abb61a688167623088f8768cc9264798df6a9d10",
)

# Configure and register the hermetic llvm toolchain.

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    name = "cc-toolchain-llvm",
    llvm_version = "19.1.7",  # haven't figure out why cannot find download url while > 20.0.0
    # stdlib = {
    #     "linux-x86_64": "stdc++",
    #     "linux-aarch64": "stdc++",
    # },
)
use_repo(llvm, "cc-toolchain-llvm")

register_toolchains("@cc-toolchain-llvm//:all")
